# nema

./: CMakeLists.txt  LICENSE  README.md
include/common/: bswap.hpp  file.hpp  types.hpp
include/hw/: cpu.hpp  dma.hpp
include/sys/: config.hpp  emulator.hpp  memory.hpp
src/: main.cpp
src/common/: bswap.cpp  file.cpp
src/hw/: cpu.cpp  dma.cpp
src/sys/: emulator.cpp  memory.cpp
